fix scroll bugs on ios

--- a/static/record-mobile.css
+++ b/static/record-mobile.css
@@ -10,7 +10,7 @@
   transition: margin .4s;
 }
 .message-wrapper.start:hover .time {
-  visibility: unset;
+  visibility: hidden;
 }
 .message-wrapper.start {
   padding-top: 20px;
